# src/main/java/org/tkit/onecx/ai/provider/domain/models/Agent.java
@@ -42,6 +42,12 @@ public class Agent extends TraceableEntity {
     @Column(name = "A2A_ENABLED")
     private Boolean a2aEnabled;
 
+    @Column(name = "VOICE_ENABLED")
+    private Boolean voiceEnabled;
+
+    @Column(name = "LANGUAGE_CODE")
+    private String languageCode;
+
     @Column(name = "STATUS")
     @Enumerated(EnumType.STRING)
     private AgentStatus status;
